added meta tags for OG preview

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="June Balter Portfolio"
       content="June Balter | Full Stack Software Engineer"
     />
+    <meta property="og:title" content="June Balter - Dev Portfolio" />
+    <meta property="og:description" content="June Balter | Full Stack Software Engineer portfolio | built with React and Tailwind.">
+    <meta property="og:image" content="%PUBLIC_URL%/portfolioPreview.png" />
+    <meta property="og:url" content="https://junebalter.fly.dev" />
+    <meta property="og:type" content="website" />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
