updated empower imgur source

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="June Balter | Full Stack Software Engineer"
     />
     <meta property="og:title" content="June Balter - Dev Portfolio" />
-    <meta property="og:description" content="June Balter | Full Stack Software Engineer portfolio | built with React and Tailwind.">
+    <meta property="og:description" content="June Balter | Full Stack Software Engineer portfolio | built with React, Tailwind, JavaScript, CSS.">
     <meta property="og:image" content="%PUBLIC_URL%/portfolioPreview.png" />
     <meta property="og:url" content="https://junebalter.fly.dev" />
     <meta property="og:type" content="website" />
